Filter alarms by system name in REST API